--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,6 +3,7 @@ $default-margin: 25px 0;
 @import "partials/navigation";
 @import "partials/mainwindow";
 @import "partials/home";
+@import "partials/pollen";
 @import "partials/footer";
 
 * {
