--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -6,4 +6,19 @@ header {
     margin: 0 auto;
     width: 100%;
     max-width: 1024px;
+    h1 {
+      animation: jump linear 2s infinite alternate;
+    }
+  }
+
+  @keyframes jump {
+    0% {
+      transform: translateY(-5px);
+    }
+    50% {
+      transform: translateY(5px) scale(1.2);
+    }
+    100% {
+      transform: translateY(0px) scale(1.0);
+    }
   }
