--- a/scss/partials/_navigation.scss
+++ b/scss/partials/_navigation.scss
@@ -34,13 +34,13 @@ nav {
 }
 
 .fa-window-close, .fa-bars {
-  font-size: 25px;
-  color: red;
+  font-size: 35px;
+  color: rgba(0, 0, 0, 0.4);
   margin: 0 auto;
 }
 
 .fa-window-close:hover, .fa-bars:hover {
-  color: #fff;
+  color: rgba(0, 0, 0, 1);
   cursor: pointer;
 }
 
