--- a/scss/partials/_pollen.scss
+++ b/scss/partials/_pollen.scss
@@ -2,6 +2,13 @@
   display: flex;
   flex-flow: column wrap;
   align-items: center;
+  .author {
+    color: #000;
+    padding: 10px;
+    font-weight: 700;
+    font-style: italic;
+    border: 1px solid rgba(0, 0, 0, 0.4);
+  }
   .month__wrapper {
     display: flex;
     flex-flow: row wrap;
@@ -13,13 +20,9 @@
       flex-flow: column wrap;
       align-items: center;
       padding: 25px;
-      border: 3px solid #fff;
       border-radius: 2px;
-      color: #000;
       margin: 5px;
-      background-image: url("../img/leaf.jpg");
-      background-repeat: no-repeat;
-      background-size: cover;
+      background: rgba(0, 0, 0, 0.4);
       span,
       button {
         padding: 15px;
@@ -35,6 +38,9 @@
         color: #000;
         cursor: pointer;
       }
+    }
+    .month__square:hover {
+      background: rgba(0, 0, 0, 1);
     }
     .month__square__details {
       display: flex;
@@ -52,10 +58,9 @@
         flex-flow: column wrap;
         align-items: center;
         padding: 5px;
-        border: 3px solid #fff;
-        border-radius: 2px;
         color: #000;
         margin: 5px;
+        border: 3px solid rgba(0, 0, 0, 0.4);
         i {
           color: #008000;
         }
@@ -63,6 +68,13 @@
           color: #00cd00;
           cursor: pointer;
         }
+        .fa-tree,
+        .fa-seedling {
+          font-size: 35px;
+        }
+      }
+      .month__square__pollen:hover {
+        border: 3px solid rgba(0, 0, 0, 1);
       }
       .month__square__pollendetails {
         display: flex;
@@ -70,7 +82,7 @@
         align-items: center;
         animation: slowEnter 1.25s ease-in-out;
         background: rgba(255, 255, 255, 0.55);
-        max-width: 50%;
+        // max-width: 25vw;
         .pollen__details__wrapper {
           display: flex;
           flex-flow: column wrap;
@@ -104,15 +116,9 @@
             width: 200px;
           }
         }
-        
       }
     }
   }
-}
-
-.fa-tree,
-.fa-seedling {
-  font-size: 35px;
 }
 
 @keyframes slowEnter {
