--- a/scss/partials/_pollen.scss
+++ b/scss/partials/_pollen.scss
@@ -61,11 +61,13 @@
         color: #000;
         margin: 5px;
         border: 3px solid rgba(0, 0, 0, 0.4);
-        i {
-          color: #008000;
+        img {
+          width: 25px;
+          height: 25px;
+          opacity: 0.4;
         }
-        i:hover {
-          color: #00cd00;
+        img:hover {
+          opacity: 1;
           cursor: pointer;
         }
         .fa-tree,
