--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -7,16 +7,17 @@ header {
     width: 100%;
     max-width: 1024px;
     h1 {
-      animation: jump linear 2s infinite alternate;
+      animation: jump linear 1s;
+      color: #000;
     }
   }
 
   @keyframes jump {
     0% {
-      transform: translateY(-5px);
+      transform: translateY(-2px);
     }
     50% {
-      transform: translateY(5px) scale(1.2);
+      transform: translateY(2px) scale(1.1);
     }
     100% {
       transform: translateY(0px) scale(1.0);
