poprawki w sekcji info

--- a/scss/partials/_navigation.scss
+++ b/scss/partials/_navigation.scss
@@ -41,7 +41,7 @@ nav {
 
 .fa-window-close:hover, .fa-bars:hover {
   color: rgba(0, 0, 0, 1);
-  cursor: pointer;
+  cursor: grab;
 }
 
 @keyframes visibleNav {
