--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 $default-margin: 25px 0;
+$custom: url('../img/cursor.png'), auto;
 @import "partials/header";
 @import "partials/navigation";
 @import "partials/mainwindow";
