--- a/scss/partials/_info.scss
+++ b/scss/partials/_info.scss
@@ -10,15 +10,34 @@
   padding: 25px;
   .info__wrapper__slider {
     animation: slowEnter 1.25s ease-in-out;
-    span {
-        animation: slowEnter 1.25s ease-in-out;
+    p, blockquote, p#break {
+      animation: slowEnter 1.25s ease-in-out;
+    }
+    blockquote {
+      margin-top: 10px;
+      font-style: italic;
+    }
+    p#break {
+      margin-top: 5px;
+      color: red;
+      font-weight: bolder;
+    }
+    a:visited,
+    a:link {
+      text-decoration: none;
+      color: rgba(255, 255, 255, 0.4);
+    }
+    a:visited:hover,
+    a:link:hover {
+      text-decoration: none;
+      color: rgba(255, 255, 255, 1);
     }
   }
 }
 
 .info__wrapper:hover {
   background: rgba(0, 0, 0, 1);
-  cursor: $custom;
+  cursor: text;
 }
 
 .fa-arrow-left,
